--- a/lec_1.tex
+++ b/lec_1.tex
@@ -1,13 +1,33 @@
 \documentclass{article}
-\usepackage{amsmath,latexsym,babel,amssymb,amsfonts,geometry}
+\usepackage{amsmath,latexsym,babel,amssymb,amsfonts,geometry,physics}
 \usepackage[dvipsnames]{xcolor}
 
-\title{QM3 Lec 1}
+\title{QM2 }
 \author{Pushkar Mohile}
 \newcommand{\note}[1]{\color{blue} Note: #1}
 \begin{document}
- \maketitle   
+ \maketitle 
+ \section{Lec 1}
+ \subsection{Stuff from QM1}
+ The course is very important. More important than QM1. QM1 teaches special problems. Real quantum system 
+ Need approximation methods. 
+ QM - linear vector space. 
+ SHO, ladder operator Solve directly or use ladder operators. Clebsch-Gordon, Addition of Angular momentum. 
+We study appproximation methods. Perturbation theory. \\
+Eg: He-4 cannot be solved exactly using the Schrodinger Equation. But variational methods are good for this. 
+ Require an approximate numerical solution.
+ Scattering: You scatter particles from a potential scattering center (Rutherford scattering)
+ \subsection{Review}
+ Ladder operators are generalizable to the H-atom too. 
 
+ Postulates of QM
+ \begin{itemize}
+     \item State described by an infite dimensoonal vector \( \psi(x,t) \) 
+     \item All attributes to be specified in the \(|x> \)
+     \item Normalization: Inner product is 1 or dirac delta. 
+     \item Observables are replaced by hermitian operators. 
+    
+    \end{itemize}
 
 
 \end{document}
