--- a/QM3.tex
+++ b/QM3.tex
@@ -78,4 +78,15 @@ have the same no of co and contravaraint indices. \\
 Index lowering and raising 
 
 
+\section{Klein Gordan Equation L2}
+Relativistic physics describes particle 
+behaivour at high energies. We want our description of the laws of physics to be invariant under lorentz transformations. This means that the time coordinate should be treated similar to the spatial coordinates. \\
+Further we want to continue to maintain the uncertainty principle in QM. \(\Delta x ~ \frac{h}{2\pi m_0c}\). If the particles come too close together you have interactions leading to pair production for \(E > 2m_0c^2\) \\
+In relativistic QM we drop the assumption of conservation of particle number because of pair creation/annhilation \\
+
+Everything is assumed to be 0 at spacetime infinity
+\note{Look up time energy uncertainty in QM} \\
+Total energy is 0
+
+
 \end{document}
